test/fail/ATPMissingArgument.agda
-- The ATP roles must to have at least an argument

-- This error is detected by Syntax.Translation.ConcreteToAbstract.

module ATPMissingArgument where

{-# ATP axiom #-}
